--- a/project/submission/Regex/regex/home/templates/includes/sidebar.html
+++ b/project/submission/Regex/regex/home/templates/includes/sidebar.html
@@ -28,8 +28,7 @@
               <span class="sidebar-icon {{ app.icon }}"></span>
             </div>
             <a href="{{ app.url }}">
-              <span class="nav-link-text ms-1">{{ app.label|slice:10 }}{% if app.label|length > 10 %}..{% endif
-                %}</span>
+              <span class="nav-link-text ms-1">{{ app.label|slice:14 }} {% if app.label|length > 10 %}{% endif %}</span>
             </a>
           </span>
         </span>
@@ -56,7 +55,6 @@
         </div>
         {% endif %}
       </li>
-      {% endif %}
       {% endif %}
       {% endfor %}
       {% endif %}
